all files updated

--- a/ModelFeatures.ipynb
+++ b/ModelFeatures.ipynb
@@ -20,16 +20,16 @@
    "source": [
     "Lets consider how a coin is flipped and what factors will determine how it lands:\n",
     "\n",
-    "How hard was the coin flipped.\n",
-    "The weight of the coin.\n",
-    "What was the angle of the coin on the finger of the person flipping the coin.\n",
-    "How high above the floor is the coin flipped.\n",
-    "Which face of the coin was up when the coin was being flipped\n",
-    "Direction and strength of wind around the coin when flipped.\n",
+    "- How hard was the coin flipped.\n",
+    "- The weight of the coin.\n",
+    "- What was the angle of the coin on the finger of the person flipping the coin.\n",
+    "- How high above the floor is the coin flipped.\n",
+    "- Which face of the coin was up when the coin was being flipped\n",
+    "- Direction and strength of wind around the coin when flipped.\n",
     "\n",
     "Etc...\n",
     "\n",
-    "There are a lot of factors we can collect."
+    "There are a lot of factors we can collect. If we add too many features, we are adding too many dimensions which would make future modeling computationally difficult. Choosing a few but critical features would be essential for good modeling. "
    ]
   },
   {
